--- a/vignettes/piggyback.Rmd
+++ b/vignettes/piggyback.Rmd
@@ -9,14 +9,11 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  results="hide",
-  eval = Sys.getenv("TAN_GH_TOKEN", FALSE)
-)
-
-Sys.setenv(piggyback_cache_duration=0)
+knitr::opts_chunk$set(eval = FALSE)
+```
+```{r}
+library(piggyback)
+library(magrittr)
 ```
 
 ## Why `piggyback`?
@@ -46,53 +43,56 @@ managing your GitHub credentials is detailed in this
 [usethis vignette](https://usethis.r-lib.org/articles/git-credentials.html).
 
 You can also add the token as an environment variable, which may be useful in 
-situations where you use piggyback non-interactively (i.e.scheduled/automated scripts). 
+situations where you use piggyback non-interactively (i.e. automated scripts).
 Here are the relevant steps:
 
 - Create a [GitHub Token](https://github.com/settings/tokens/new?scopes=repo,gist&description=PIGGYBACK_PAT)
-
 - Add the environment variable:
   - via project-specific Renviron: 
-    - `usethis::use_git_ignore(".Renviron")` - update your gitignore to prevent 
-    accidentally committing your token to GitHub
+    - `usethis::use_git_ignore(".Renviron")` to update your gitignore - this 
+    prevents accidentally committing your token to GitHub
     - `usethis::edit_r_environ("project")` to open the Renviron file, and then 
     add your token, e.g. `GITHUB_PAT=ghp_a1b2c3d4e5f6g7`
-  - via `Sys.setenv(GITHUB_PAT = "ghp_a1b2c3d4e5f6g7")` in your console for oneoff 
+  - via `Sys.setenv(GITHUB_PAT = "ghp_a1b2c3d4e5f6g7")` in your console for adhoc
   usage. Avoid adding this line to your R scripts -- remember, the goal here is 
   to avoid writing your private token in any file that might be shared, even 
   privately.
 
-## Downloading data
+## Download Files
 
 Download a file from a release:
 ```{r}
-pb_download("iris2.tsv.gz", 
-            repo = "cboettig/piggyback-tests",
-            tag = "v0.0.1",
-            dest = tempdir())
+pb_download(
+  file = "iris2.tsv.gz", 
+  dest = tempdir(),
+  repo = "cboettig/piggyback-tests",
+  tag = "v0.0.1"
+  )
 #> ℹ Downloading "iris2.tsv.gz"...
 #>   |======================================================| 100%
 fs::dir_tree(tempdir())
 #> /tmp/RtmpWxJSZj
 #> └── iris2.tsv.gz
 ```
+Some default behaviors to know about:
 
-**Tips:**
-
-1. Whenever you are working from a location inside a git repository corresponding 
-to your GitHub repo, you can simply omit the `repo` argument and it will be detected 
-automatically. 
-2. Likewise, if you omit the release `tag`, `pb_download` will simply pull data 
-from most recent release (`latest`).  
-3. You can omit `tempdir()` if you are using an RStudio Project (`.Rproj` file) 
-in your repository: download locations will be relative to Project root.  
-`tempdir()` is used throughout the examples only to meet CRAN policies and is 
-unlikely to be the choice you actually want here.  
-4. Omit the file name to download all assets connected with a given release.  
+1. The `repo` argument in most piggyback functions will default to detecting the 
+   relevant GitHub repo based on your current working directory's git configs, 
+   so in many cases you can omit the `repo` argument.
+2. The `tag` argument in most functions defaults to "latest", which typically 
+   refers to the most recently created release of the repository, unless there 
+   is a release specifically named "latest" or if you have marked a different
+   release as "latest" via the GitHub UI. 
+3. The `dest` argument defaults to your current working directory (`"."`). We
+   use `tempdir()` to meet CRAN policies for the purposes of examples.
+4. The `file` argument in `pb_download` defaults to NULL, which will download
+   all files connected to a given release:
 ```{r}
-pb_download(repo = "cboettig/piggyback-tests",
-            tag = "v0.0.1",
-            dest = tempdir())
+pb_download(
+  repo = "cboettig/piggyback-tests",
+  tag = "v0.0.1",
+  dest = tempdir()
+)
 #> ℹ Downloading "diamonds.tsv.gz"...
 #>   |======================================================| 100%
 #> ℹ Downloading "iris.tsv.gz"...
@@ -106,39 +106,130 @@ fs::dir_tree(tempdir())
 #> ├── iris.tsv.xz
 #> └── iris2.tsv.gz
 ```
-
-These defaults mean that in most cases, it is sufficient to simply call `pb_download()` 
-without additional arguments to pull in any data associated with a project on a 
-GitHub repo that is too large to commit to git directly. 
-
-Notice that above, `iris2.tsv.gz` was not downloaded. `pb_download()` will skip 
-downloading of any file that already exists locally, if the timestamp on the local 
-copy is more recent than the timestamp on the GitHub copy.  Use the `overwrite` 
-parameter to control this behaviour.
+5. The `use_timestamps` argument defaults to TRUE - notice that above, 
+   `iris2.tsv.gz` was not downloaded. If `use_timestamps` is TRUE, pb_download() 
+   will compare the local file timestamp against the GitHub file timestamp, and
+   only download the file if it has changed.
 
 `pb_download()` also includes arguments to control the progress bar or if any 
 particular files should not be downloaded.
 
-### Public Download URLs
+## Download URLs
 
-Sometimes it is preferable to have a URL from which the data can be read in directly, 
-rather than downloading the data to a local file.  For example, such a URL can be 
-embedded directly into another R script, avoiding any dependence on `piggyback` 
-(provided the repository is already public.)  To get a list of public download URLs 
-rather than actually downloading the files, use `pb_download_url()`:
+Sometimes it is preferable to have a URL from which the data can be read in directly.
+These URL can then be passed into another R function, which can be more elegant 
+and performant than having to first download the files locally. Enter `pb_download_url()`:
 
 ```{r}
-pb_download_url(repo = "cboettig/piggyback-tests",  
-                tag = "v0.0.1")
+pb_download_url(repo = "cboettig/piggyback-tests", tag = "v0.0.1")
 #> [1] "https://github.com/cboettig/piggyback-tests/releases/download/v0.0.1/diamonds.tsv.gz"
 #> [2] "https://github.com/cboettig/piggyback-tests/releases/download/v0.0.1/iris.tsv.gz"    
 #> [3] "https://github.com/cboettig/piggyback-tests/releases/download/v0.0.1/iris.tsv.xz"    
 #> [4] "https://github.com/cboettig/piggyback-tests/releases/download/v0.0.1/iris2.tsv.gz" 
 ```
 
-Note that these will not work if authentication is required to download them
+By default, this function returns the same download URL that you would get by 
+visiting the release page, right-clicking on the file, and copying the link (aka
+the "browser_download_url"). This URL is served by GitHub's web servers and not 
+its API servers, and therefore not as restrictive with rate-limiting. 
+ 
+However, this URL is not accessible for private repositories, since the auth 
+tokens are handled by the GitHub API. You can retrieve the API download url for
+private repositories by passing in `"api"` to the `url_type` argument:
+```{r}
+pb_download_url(repo = "cboettig/piggyback-tests", tag = "v0.0.1", url_type = "api")
+#> [1] https://api.github.com/repos/cboettig/piggyback-tests/releases/assets/44261315
+#> [2] https://api.github.com/repos/cboettig/piggyback-tests/releases/assets/41841778
+#> [3] https://api.github.com/repos/cboettig/piggyback-tests/releases/assets/18538636
+#> [4] https://api.github.com/repos/cboettig/piggyback-tests/releases/assets/8990141
+```
 
-## Reading data
+`pb_download_url` otherwise shares similar default behaviors with `pb_download` 
+for the `file`, `repo`, and `tag` arguments.
+
+## Reading data for R usage
+
+`piggyback` supports several general patterns for reading data into R, with 
+increasing degrees of performance/efficiency (and complexity):
+
+- `pb_download()` files to disk and then reading files with a function that reads
+from disk into memory
+- `pb_download_url()` a set of URLs and then passing those URLs to a function that
+retrieves those URLs directly into memory
+- Disk-based workflows which require downloading all files first but then can
+perform queries before reading into memory
+- Cloud-native workflows which can perform queries directly on the URLs before
+reading into memory
+
+We recommend the latter two approaches in cases where performance and efficiency
+matter, and have some vignettes with examples:
+- [cloud native workflows](https://docs.ropensci.org/piggyback/articles/cloud_native.html)
+- disk native workflows
+
+### Reading from URLs
+
+Many read functions accept URLs, including `read.csv()`, `arrow::read_parquet()`,
+`readr::read_csv()`, `data.table::fread()`, and `jsonlite::fromJSON()`, so reading
+in one file can be done efficiently by passing along the output of `pb_download_url()`
+```{r}
+pb_download_url("mtcars.csv", repo = "tanho63/piggyback-tests", tag = "v0.0.2") %>%
+  read.csv()
+#> # A data.frame: 32 × 12
+#>   X        mpg   cyl  disp    hp  drat    wt  qsec    vs    am  gear
+#>   <chr>  <dbl> <int> <dbl> <int> <dbl> <dbl> <dbl> <int> <int> <int>
+#> 1 Mazda…  21       6   160   110  3.9   2.62  16.5     0     1     4
+#> 2 Mazda…  21       6   160   110  3.9   2.88  17.0     0     1     4
+#> 3 Datsu…  22.8     4   108    93  3.85  2.32  18.6     1     1     4
+#> 4 Horne…  21.4     6   258   110  3.08  3.22  19.4     1     0     3
+#> 5 Horne…  18.7     8   360   175  3.15  3.44  17.0     0     0     3
+#> # ℹ 27 more rows
+#> # ℹ 1 more variable: carb <int>
+#> # ℹ Use `print(n = ...)` to see more rows
+```
+
+Some functions also accept connections when wrapped by `url()`, e.g. for `readRDS()`:
+```{r}
+pb_url <- pb_download_url("mtcars.rds", repo = "tanho63/piggyback-tests", tag = "v0.0.2") %>%
+  url()
+readRDS(pb_url)
+#> # A data.frame: 32 × 11
+#>     mpg   cyl  disp    hp  drat    wt  qsec    vs    am  gear  carb
+#>   <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
+#> 1  21       6   160   110  3.9   2.62  16.5     0     1     4     4
+#> 2  21       6   160   110  3.9   2.88  17.0     0     1     4     4
+#> 3  22.8     4   108    93  3.85  2.32  18.6     1     1     4     1
+#> 4  21.4     6   258   110  3.08  3.22  19.4     1     0     3     1
+#> 5  18.7     8   360   175  3.15  3.44  17.0     0     0     3     2
+#> # ℹ 27 more rows
+#> # ℹ Use `print(n = ...)` to see more rows
+close(pb_url)
+```
+Note that using `url()` requires that we close the connection after reading it, 
+or else we will receive warnings about leaving open connections.
+
+We can also use this `url()` approach to pass along authentication for private 
+repositories, e.g.
+```{r}
+pb_url <- pb_download_url("mtcars.rds", repo = "tanho63/piggyback-private", url_type = "api") %>%
+  url(
+    headers = c(
+      "Accept" = "application/octet-stream",
+      "Authorization" = paste("Bearer", gh::gh_token())
+    )
+  )
+readRDS(pb_url)
+#> # A tibble: 32 × 11
+#>     mpg   cyl  disp    hp  drat    wt  qsec    vs    am  gear  carb
+#>   <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl> <dbl>
+#> 1  21       6   160   110  3.9   2.62  16.5     0     1     4     4
+#> 2  21       6   160   110  3.9   2.88  17.0     0     1     4     4
+#> 3  22.8     4   108    93  3.85  2.32  18.6     1     1     4     1
+#> 4  21.4     6   258   110  3.08  3.22  19.4     1     0     3     1
+#> 5  18.7     8   360   175  3.15  3.44  17.0     0     0     3     2
+#> # ℹ 27 more rows
+#> # ℹ Use `print(n = ...)` to see more rows
+close(pb_url)
+```
 
 ## Uploading data
 
@@ -178,7 +269,8 @@ parameter.
 
 ### Multiple files
 
-You can pass in a vector of file paths with something like `list.files()` to the `file` argument of `pb_upload()` in order to upload multiple files. Some common patterns: 
+You can pass in a vector of file paths with something like `list.files()` to the 
+`file` argument of `pb_upload()` in order to upload multiple files. Some common patterns: 
 
 ```{r}
 library(magrittr)
@@ -190,7 +282,6 @@ list.files("data") %>%
 ## upload certain file extensions
 list.files(pattern = c("*.tsv.gz", "*.tif", "*.zip")) %>% 
   pb_upload(repo = "cboettig/piggyback-tests", tag = "v0.0.1")
-
 ```
 Similarly, you can download all current data assets of the latest or specified 
 release by using `pb_download()` with no arguments.
@@ -203,7 +294,7 @@ Delete a file from a release:
 pb_delete(file = "mtcars.tsv.gz", 
           repo = "cboettig/piggyback-tests", 
           tag = "v0.0.1")
-> ℹ Deleted "mtcars.tsv.gz" from "v0.0.1" release on "cboettig/piggyback-tests"
+#> ℹ Deleted "mtcars.tsv.gz" from "v0.0.1" release on "cboettig/piggyback-tests"
 ```
 Note that this is irreversible unless you have a copy of the data elsewhere. 
 
@@ -213,8 +304,7 @@ List all files currently piggybacking on a given release.  Omit `tag` to see
 files on all releases.  
 
 ```{r}
-pb_list(repo = "cboettig/piggyback-tests", 
-        tag = "v0.0.1")
+pb_list(repo = "cboettig/piggyback-tests", tag = "v0.0.1")
 #>         file_name   size           timestamp    tag    owner            repo
 #> 1 diamonds.tsv.gz 571664 2021-09-07 23:38:31 v0.0.1 cboettig piggyback-tests
 #> 2     iris.tsv.gz    846 2021-08-05 20:00:09 v0.0.1 cboettig piggyback-tests
